fix: header overflow

--- a/www/js/style.css
+++ b/www/js/style.css
@@ -1,4 +1,4 @@
-/* temp_stylePlugin:ni:sha-256;8f7yOs1b_9o9X4RWxxix8X9gha0ob5oaL_zO-ieBHgE */
+/* temp_stylePlugin:ni:sha-256;dqZwcPLWe8OEIFEukSYi01kT5vwmy3gcGTI2UMgrmQA */
 *,
 ::before,
 ::after {
@@ -419,6 +419,15 @@ video {
 .h-8 {
   height: 2rem;
 }
+.h-2 {
+  height: 0.5rem;
+}
+.h-3 {
+  height: 0.75rem;
+}
+.h-7 {
+  height: 1.75rem;
+}
 .min-h-0 {
   min-height: 0px;
 }
@@ -451,6 +460,15 @@ video {
 }
 .w-8 {
   width: 2rem;
+}
+.w-40 {
+  width: 10rem;
+}
+.w-2 {
+  width: 0.5rem;
+}
+.w-24 {
+  width: 6rem;
 }
 .min-w-min {
   min-width: -moz-min-content;
@@ -633,6 +651,10 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 .p-1 {
   padding: 0.25rem;
